# some_hash

./: .gitignore  README.md  pyproject.toml
configs/: 3090.toml  debug.toml  default.toml  jacobian_3090.toml  jacobian_full_3090.toml  jacobian_ste_3090.toml  mac.toml
configs/sweep/: 01_tiny.toml  02_shallow.toml  03_shallow_wide.toml  04_medium.toml  05_deep_narrow.toml  06_baseline.toml  07_wide.toml  3090_L1_d256.toml  3090_L2_d256.toml  3090_L2_d512.toml  3090_L4_d256.toml  3090_L6_d256.toml
scripts/: benchmark.py  direct_optimize.py  gradient_check.py  round_sweep.py  sample.py  sweep.py  train.py  train_jacobian.py  train_surrogate.py
src/: config.py  data.py  diffusion.py  eval.py  jacobian_data.py  jacobian_net.py  md5_gpu.py  md5_surrogate.py  model.py  soft_md5.py  train.py
